# foncu

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICK_FIX_SUMMARY.md  README.md  SETUP.md  VERCEL_SETUP.md  api-server.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  supabase-schema.sql  vercel.json  verify-fixes.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  csp-policy-check.yml  quality.yml  (+2 more)
.jules/: bolt.md
api/: fund-history.js  fund-profile.js  fund-risk.js  fund-screen.js  fund-technical-scan.js  funds.js  health.js  holdings-screener.js  macro-series.js  market-events.js  overlap.js  portfolio-exposure.js  portfolio-valuation.js  portfolio.js  seed-holdings.js  sync-fintables-daily.js  sync-fintables.js  sync-fund-holdings-monthly.js
docs/: AUDIT_2026-07-12.md  CSP_POLICY.md  DATA_SOURCES.md  QUICK_FIX_SUMMARY.md  SETUP.md  TESTING_INSTRUCTIONS.md  VERCEL_SETUP.md
frontend/: .env.example  .prettierignore  index.html  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend-mobile/: index.html  package-lock.json
scripts/: backfill-tefas-history.js  benchmark-sma.js  check-csp.js  dev-server.js  export_tefas_yat_codes.js  requirements-kap-holdings.txt  seed-fund-profiles.js  sync_kap_holdings.py  verify-environment.js  verify-fixes.sh
tefas/: __init__.py  crawler.py  schema.py
tests/: benchmark_valuation.js  test_config.py  test_crawler.py  test_tarih_conversion.py
(+95 files in other folders)
