[build-system]
requires = ["setuptools>=45", "wheel"]

[project]
name = "tefas-crawler"
version = "0.1.0"
description = "Crawler for Turkish Electronic Fund Trading Platform (TEFAS)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Fatih Ustun", email = "fatih@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "pandas>=1.5.0",
    "marshmallow>=3.18.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
]

[project.scripts]
tefas = "tefas.cli:main"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
max-line-length = 88
